--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ body {
 }
 
 
-.todasImagenes{
+/*.todasImagenes{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-areas:
@@ -105,7 +105,7 @@ body {
     "titulo titulo titulo"
     "imagen1 imagen2 imagen3"
     "footer footer footer"
-}
+}*/
 
 .imagen1{
     grid-area: imagen1;
