--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,38 +1,26 @@
-body {
-    background-image: url('../img/fondo.jpg')
-}
+.imagen1 {
+  grid-area: imagen1;
+  transition: all 1s; }
+  .imagen1:hover {
+    transform: scale(1.1); }
 
-.tamLogo{
-    width: 100px;
-}
+.tamLogo {
+  width: 100px; }
 
-.colorFondo{
-    background-color: burlywood;
-}
+.colorFondo {
+  background-color: burlywood; }
 
-.ancla{
-    font-size: 1rem;
-    font-weight: bold;
-    text-transform: uppercase;
-}
+.ancla {
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase; }
 
-.parrafoConHover:hover{
+.parrafoConHover {
+  grid-area: parrafoConHover;
+  transition: all 1s; }
+  .parrafoConHover:hover {
     color: blue;
-}
+    transform: scale(1.1); }
 
-.parrafoConHover:hover{
-    transform: scale(1.1)
-}
-
-.parrafoConHover{
-    grid-area: parrafoConHover;
-    transition: all 1s;
-}
-
-.imagen1{
-    grid-area: imagen1;
-    transition: all 1s;
-}
-.imagen1:hover{
-    transform: scale(1.1)
-}
+body {
+  background-image: url("../img/fondo.jpg"); }
