--- a/css/estilo.css
+++ b/css/estilo.css
@@ -24,3 +24,26 @@
 
 body {
   background-image: url("../img/fondo.jpg"); }
+
+.ancla {
+  background-color: red;
+  font-size: 30px; }
+
+.primerEstilo, .segundoEstilo {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-align: center; }
+
+.segundoEstilo {
+  font-size: 18px; }
+
+/* sin parametros*/
+.parrafosConEstilo {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 2rem;
+  text-align: center; }
+
+/*con parametros*/
+.parrafosConHambre {
+  font-size: 50px;
+  text-align: right; }
